# cacao2

./: AISuggestion.md  Approach-A-Trampoline-Class.md  Approach-B-AppDelegate-Dispatch.md  Approach-C-ThreadLocal-Registry.md  Approach-Comparison.md  Approach-D-Tag-Enum-Dispatch.md  Cargo.toml  LICENSE.md  README.md
src/: application.rs  lib.rs  view.rs  window.rs
src/view/: button.rs  text.rs
src/window/: titlebar.rs
