[package]
name = "cacao2"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = ["CGColor"] }
objc2-foundation = "0.3.2"
objc2-quartz-core = { version = "0.3.2", features = ["CALayer", "objc2-core-graphics"] }
